# 127.0.0.1

./: .gitignore  .pylintrc  DEBUG_FIXES_COMPLETE.md  ENHANCED_AGENT_DEPLOYMENT_SUCCESS.md  ERRORS_DEBUGGED_SUCCESS.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_SUCCESS.md  PREFERENCE_BALANCE_INTEGRATION.md  PREFERENCE_IMPLEMENTATION_COMPLETE.md  comprehensive_validation.py  mock_backend.py  pyproject.toml  pyrightconfig.json  requirements.txt  simple_backend.py  simple_test.py  test-regex-simple.js  test-regex.js  test_chart_extraction.js  test_chart_generation.py  test_enhanced_agent.py  test_graph_generation.py  test_preference_integration.py  test_request.json  test_social_media_visualization.py  validate_implementation.py
docs/individual_agents/: enhanced_fast_agent_preferences.md
src/ai/agent_prompts/: enhanced_fast_agent_prompt.py
src/ai/agents/: fast_agent.py  preference_aware_response_agent.py  preference_detection_agent.py  test_enhanced_fast_agent.py
src/ai/llm/: config.py
src/ai/tools/: _imports.py  advanced_financial_analyzer.py  advanced_trading_signals.py  ai_portfolio_optimizer.py  finance_data_tools.py  graph_gen_tool.py  graph_gen_tool_system_prompt.py  real_time_market_system.py  smart_chart_generator.py  visualization_demo.py  world_class_visualizer.py
src/ai/utils/: preference_parser.py  response_adapter.py
src/backend/: app.py
src/backend/api/: enhanced_preference_api.py  preference_api.py  user.py
src/frontend/: .env.local  next.config.ts  test-graph.html
tests/: test_backend_health.py  test_final_health.py  test_preference_detection.py  test_preference_simple.py
tools/: redis_test.py
typings/: __init__.py
typings/matplotlib/: __init__.pyi  dates.pyi  patches.pyi  pyplot.pyi
typings/numpy/: __init__.pyi
typings/pandas/: __init__.pyi
typings/plotly/: __init__.pyi  express.pyi  graph_objects.pyi  subplots.pyi
typings/seaborn/: __init__.pyi
(+40 files in other folders)
