[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thenzt-open-source"
description = "Revolutionary AI-powered financial analysis platform"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "TheNZT Team", email = "team@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "requests>=2.25.0",
]

[tool.pylint.master]
extension-pkg-allow-list = "numpy,pandas,matplotlib,plotly,seaborn"

[tool.pylint.messages_control]
disable = [
    "import-error",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "unused-argument",
    "redefined-outer-name",
]

[tool.pylint.typecheck]
ignored-modules = ["numpy", "pandas", "matplotlib", "plotly", "seaborn"]
ignored-classes = ["numpy", "pandas", "matplotlib", "plotly", "seaborn"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "matplotlib.*",
    "plotly.*",
    "seaborn.*",
    "sklearn.*",
]
ignore_missing_imports = true